# hwautomation

./: .coveragerc  .dockerignore  .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FILE_ORGANIZATION_PHASE2.md  LOGGING_MIGRATION_COMPLETE.md  Makefile  PHASE3_PLAN.md  README.md  bandit-report.json  codecov.yml  copilot-instructions.md  demo_workflow_management.py  dev.py  docker-compose.override.yml  docker-compose.yml  docker-make  fix_d400.py  fix_docstrings.py  fix_pydocstyle.py  fix_underlines.py  junit.xml  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-all.txt  requirements.txt  setup.cfg  test_config.yaml  test_dashboard_fixes.py  (+5 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  test.yml
config/: logging.yaml
configs/: README.md
configs/bios/: device_mappings.yaml  preserve_settings.yaml  template_rules.yaml
configs/devices/: unified_device_config.yaml
configs/firmware/: firmware_repository.yaml
configs/logging/: logging.yaml
dev-tools/: hardware_discovery.py
docker/: Dockerfile.cli  Dockerfile.legacy  Dockerfile.web  entrypoint.sh
docs/: API_REFERENCE.md  BASE_CLASSES_REFACTORING.md  BIOS_AND_FIRMWARE.md  BIOS_CONFIGURATION.md  BIOS_MANAGER_REFACTORING.md  BOARDING_VALIDATION_REFACTORING.md  CHANGELOG_AND_RELEASES.md  CLEANUP_SUMMARY.md  COMMISSIONING_PROGRESS.md  CONFIGURATION.md  CONFIGURATION_MIGRATION_SUMMARY.md  CONTAINER_ARCHITECTURE.md  CONTAINER_CLEANUP_SUMMARY.md  CONVERSION_GUIDE.md  DATABASE_MIGRATIONS.md  DATABASE_MIGRATION_006.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCKER_DOCUMENTATION.md  DOCKER_SETUP.md  DOCUMENTATION_CLEANUP_COMPLETE.md  DOCUMENTATION_CLEANUP_PLAN.md  ENHANCED_BIOS_CONFIGURATION.md  ENHANCED_COMMISSIONING.md  ENHANCED_DASHBOARD_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  FILE_ORGANIZATION_PHASE2.md  FILE_ORGANIZATION_UPDATE.md  FIRMWARE_GITIGNORE.md  FIRMWARE_UPDATE_IMPLEMENTATION.md  GETTING_STARTED.md  GUI_SIMPLIFICATION_COMPLETE.md  GUI_SIMPLIFICATION_SUMMARY.md  HARDWARE_COMMISSIONING.md  HARDWARE_DISCOVERY.md  HARDWARE_MANAGEMENT.md  IMPLEMENTATION_ROADMAP.md  LOCAL_SUMTOOL_DEPLOYMENT.md  MODULARIZATION_PLAN.md  (+40 more)
docs/_static/: custom.css  custom.js
docs/archive/: BIOS_AND_FIRMWARE.md  CI_SPHINX_FIX.md  CONTAINER_ARCHITECTURE.md  DEVELOPMENT.md  DEVICE_CONFIG_CONSOLIDATION.md  DOCKER_COMPOSE_IPMI_PASSWORD_FIX.md  FILE_ORGANIZATION_PHASE2.md  FRONTEND_BUILD_INTEGRATION.md  FRONTEND_PAGE_LOADING_ISSUES.md  HARDWARE_COMMISSIONING.md  MODULARIZATION_PLAN.md  PHASE1_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_PLAN.md  PHASE4_FRONTEND_COMPATIBILITY_FIX.md  PHASE4_ORCHESTRATION_INTEGRATION_COMPLETE.md  PROJECT_STATUS_AND_ROADMAP.md  PROVISIONING_REFACTORING.md  SPHINX_STATUS.md  TOOLING_CONSOLIDATION.md  UNIFIED_CONFIGURATION_MIGRATION_COMPLETE.md  WEB_SERIALIZERS_REFACTORING.md  WORKFLOW_DATABASE_RECORDING_IMPLEMENTATION.md  WORKFLOW_MANAGER_REFACTORING.md  WORKFLOW_ORCHESTRATION.md
examples/: README.md  _common.py  basic_usage.py  bios_config_example.py  enhanced_commissioning_demo.py  example_phase2_integration.py  firmware_manager_demo.py  firmware_manager_smoke.py  firmware_provisioning_demo.py  hardware_discovery_demo.py  logging_integration_example.py  modular_discovery_example.py  orchestration_example.py  phase2_standalone_example.py  phase4_firmware_demo.py  phase4_implementation_example.py  phase4_logging_examples.py  phase5_api_web_modularization_example.py  redfish_example.py  run.py  test_phase4_implementation.py  vendor_discovery_test.py  workflow_subtasks_demo.py
firmware/: .gitkeep  README.md
gui/: README.md  __init__.py  app.py  app_simplified.py  launch_gui.bat  launch_simplified.sh  requirements.txt  setup_gui.py
gui/templates/: base.html  database.html  database_simple.html  device_selection.html  index.html  logs.html  maas_management.html
hwautomation-env/: pyvenv.cfg
scripts/: bios_manager.py  db_manager.py
src/hwautomation/: __init__.py  exceptions.py
tests/: README.md  conftest.py  test_firmware_integration.py  test_firmware_manager.py  test_firmware_web_interface.py  test_framework.py  test_phase2_decision_logic.py  test_phase2_focused.py  test_phase3_monitoring.py  test_phase3_standalone.py  validate_system.py
tests/integration/: test_workflow.py
tests/unit/: test_base_classes_modular.py  test_bios_base.py  test_bios_operations_focused.py  test_config.py  test_database.py  test_database_operations_focused.py  test_discovery_base.py  test_discovery_base_fixed.py  test_env_config.py  test_exceptions.py  test_firmware_focused.py  test_ipmi_focused.py  test_logging_config.py  test_maas_integration.py  test_maas_operations_focused.py  test_orchestration_steps_focused.py  test_package_structure.py  test_provisioning_refactoring.py  test_redfish_focused.py  test_redfish_manager.py  test_redfish_modular.py  test_redfish_modular_fixed.py  test_redfish_simple.py  test_web_routes_focused.py  test_workflow_focused.py  test_workflow_modular.py  test_workflow_modular_future.py.bak  test_workflow_modular_skipped.py  test_workflow_simple.py
tools/: README.md  add_device_type.py  cleanup_tools.sh  consolidate_device_configs.py  debug_device_selection.py  debug_device_selection_issue.py  integration_summary.py  migrate_config.py  migration_guide.py  old_test_ip_retrieval.py.bak  phase3_discovery_demo.py  read_excel.py  realtime_monitor.py  run_tests.bat  setup_testing.py  test_bios_system.bat  test_bios_system.py  test_config.py  test_database.py  test_phase4_integration.py  test_provision_steps.py  test_simple.py  test_updated_bios_loader.py  test_workflow_execute.py  test_workflow_manager.py  verify_db_consolidation.py  verify_sumtool.py  workflow_monitor.py
tools/archive/: phase1_completion_demo.py  phase2_firmware_demo.py  phase4_orchestration_demo.py  test_unified_config.py  unified_config_adapter_example.py
tools/cli/: bios_manager.py  db_manager.py  (+4 more)
(+407 files in other folders)
